<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_service</name>
  <version>0.0.0</version>
  <description>ROS2 Service to expose Computer Vision algorithms API</description>
  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>Apache2.0</license>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>perception_pcl</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>perception_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
